--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "firebase": "^9.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.34.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.53.0",
+    "sweetalert2": "^11.4.28",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
