--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "redacteca",
   "version": "0.1.0",
+  "homepage": "https://andrealeonfandinoe.github.io/redacteca/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
@@ -12,6 +13,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.9.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
