--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redacteca",
   "version": "0.1.0",
-  "homepage": "https://AndreaLeonfandinoE.github.io/redacteca/",
+  "homepage": "https://andrealeonfandinoe.github.io/redacteca/",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
