--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redacteca",
   "version": "0.1.0",
-  "homepage": "https://andrealeonfandinoe.github.io/redacteca/",
+  "homepage": "https://AndreaLeonFandinoE.github.io/redacteca",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
@@ -24,9 +24,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
